Keep focus inside BubbleDialogDelegateView

Removes Widget::SetFocusTraversableParent* calls since we don't want
focus to escape bubble dialogs once they get here. There are several
bubbles that close once focus escapes.

We still set kAnchoredDialogKey of the anchor view to make sure that
focus can move into attached dialogs (this makes them keyboard
accessible).

Bug: chromium:899601, chromium:899996
Change-Id: Idc5d60c2f41ae20a343324ae75b0fd304f273c94
Reviewed-on: https://chromium-review.googlesource.com/c/1311090
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604464}
Former-commit-id: 211cdf116338d89f59714f9e1d4104bc28ef809d